--- a/locales/cn.json
+++ b/locales/cn.json
@@ -78,7 +78,7 @@
         "example_text": "示例： 14.08.1996"
     },
     "passport_manual_citizenship": {
-        "title": "🌍 🌍 指定您的国籍（西里尔文）",
+        "title": "🌍 指定您的国籍（西里尔文）",
         "example_text": "示例： Узбекистан"
     },
     "migr_manual_citizenship_kid": {
@@ -371,7 +371,6 @@
         "passport": " 📄 护照: ",
         "issue_info": ", выдан ",
         "issue_date": ", срок действия ",
-        "issue_passport": " FA ",
         "issue_migr_card_info": "入口",
         "issue_migr_card": " 系列 ",
         "name_of_org": "• 姓名: ",
@@ -396,7 +395,6 @@
         "passport": " 📄 护照: ",
         "issue_info": ", выдан ",
         "issue_date": ", срок действия ",
-        "issue_passport": " FA ",
         "issue_migr_card_info": " 入口 ",
         "issue_migr_card": " 系列 ",
         "name_of_ind": "• 姓名: ",
@@ -934,19 +932,19 @@
     "change_passport_issue_place_btn": "🏢 由...发出",
     "change_value_live_adress": "🏠 输入您在俄罗斯的居住地址\n格式：城市、街道、房屋、建筑、公寓",
     "change_value_phone_number": "☎️ 请输入您当前的号码 电话а\n示例: 79809008090",
-    "change_value_mvd_adress": "请输入您申请的部门的全名（通常在您之前的注册或移民文件中注明）\n\nНа示例: ОВМ УМВД России по Приморскому району г. Санкт-Петербурга",
+    "change_value_mvd_adress": "请输入您申请的部门的全名（通常在您之前的注册或移民文件中注明）\n\nПример: ОВМ УМВД России по Приморскому району г. Санкт-Петербурга",
     "change_value_passport_data": {
         "full_name": "👤 输入姓名（仅限西里尔字母）\n示例: Абдуллаев Жахонгир Нодирович",
-        "birth_date": "📅 生日: ",
+        "birth_date": "📆 请输入出生日期，格式为 DD.MM.YYYY\n示例: 14.08.1996",
         "citizenship": "🌍 请注明您的国籍（西里尔文）\n示例: Узбекистан",
         "passport_serial_number": "📇 请注明系列和文件编号\n示例: №1225673",
-        "passport_issue_date": "🗓 请注明签发日期（DD.MM.YYYY）\n示例: 14.08.1996",
-        "passport_expiry_date": "🗓 请输入到期日期（DD.MM.YYYY）\n示例: 14.08.1996",
+        "passport_issue_date": "🗓 请注明签发日期（DD.MM.YYYY\n示例: 14.08.1996",
+        "passport_expiry_date": "🗓 请输入到期日期（DD.MM.YYYY\n示例: 14.08.1996",
         "passport_issue_place": "🏢 请注明该文件的签发人。\n示例: МВД Узбекистана"
     },
     "change_value_old_passport_data": {
         "full_name": "👤 输入姓名（仅限西里尔字母）\n示例: Абдуллаев Жахонгир Нодирович",
-        "birth_date": "📅 生日: ",
+        "birth_date": "📆 请输入出生日期，格式为 DD.MM.YYYY\n示例: 14.08.1996",
         "citizenship": "🌍 请注明您的国籍（西里尔文）\n示例: Узбекистан",
         "passport_serial_number": "📇 请注明系列和文件编号 \n示例: №1225673",
         "passport_issue_date": "🗓 请注明签发日期（DD.MM.YYYY）\n示例: 14.08.1996",
@@ -1003,65 +1001,62 @@
     "change_phone_btn": "📌 主办方",
     "change_migration_data_dict_btn": "📎 移民卡",
     "change_value_document_about_home": "📝 输入文件名称和详细信息。\n\n示例: Выписка из ЕГРН от 08.2023",
-"change_value_migration_data": {
-    "card_serial_number": "📇 移民卡系列号 / 编号\n示例: 78 0254812",
-    "citizenship": "🌍 国籍",
-    "entry_date": "📆 请输入入境俄罗斯的日期，格式为DD.MM.YYYY",
-    "full_name": "👤 输入全名（如卡片中所示）\n示例: Расулова Азиза Абдуллаевна",
-    "number_migr_card_arrival": "🗓 请注明居留许可的签发日期 (DD.MM.YYYY)",
-    "pretria_period": "📅 请注明临时停留期限\n示例: 10.08.2025",
-    "live_adress": "🏠 在俄罗斯的居住地址",
-    "goal": "✍️ 请注明入境目的 — 与移民卡上所写一致。"
+    "change_value_migration_data": {
+        "card_serial_number": "📇 移民卡系列号 / 编号\n示例: 78 0254812",
+        "citizenship": "🌍 国籍",
+        "entry_date": "📆 请输入入境俄罗斯的日期，格式为DD.MM.YYYY",
+        "full_name": "👤 输入全名（如卡片中所示）\n示例: Расулова Азиза Абдуллаевна",
+        "number_migr_card_arrival": "🗓 请注明居留许可的签发日期 (DD.MM.YYYY)",
+        "pretria_period": "📅 请注明临时停留期限\n示例: 10.08.2025",
+        "live_adress": "🏠 在俄罗斯的居住地址",
+        "goal": "✍️ 请注明入境目的 — 与移民卡上所写一致。"
     },
     "change_organization_data_dict_btn": "📄 主办方",
-   "change_value_organization_data": {
-    "adress": "🏠 请注明组织的法定地址（城市、街道、楼号）",
-    "full_name_contact_of_organization": "👔 请注明组织中联系人的全名",
-    "inn": "🧾 请注明组织的ИНН（如有）",
-    "name_org": "🏢 输入组织的名称（完整，用西里尔字母）\n\n示例: ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ «ФОРМАТ»\n(или сокращённо: ООО «ФОРМАТ»)"
+    "change_value_organization_data": {
+        "adress": "🏠 请注明组织的法定地址（城市、街道、楼号）",
+        "full_name_contact_of_organization": "👔 请注明组织中联系人的全名",
+        "inn": "🧾 请注明组织的ИНН（如有）",
+        "name_org": "🏢 输入组织的名称（完整，用西里尔字母\n\n示例: ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ «ФОРМАТ»\n(или сокращённо: ООО «ФОРМАТ»)"
     },
     "change_value_marriage_data": {
-    "spouse_fio": "👤 输入配偶的全名（仅限西里尔字母）\n示例: Кислякова Ирина Ивановна",
-    "issue_date": "📆 输入结婚证的签发日期，格式为DD.MM.YYYY\n示例: 14.08.1996",
-    "marriage_number": "📇 请注明结婚证编号\n示例: серия VII-Б №847595",
-    "marriage_issue_place": "🏢 请注明文件的签发机关\n示例: ЗАГС Центрального района г. Санкт-Петербурга"
-},
-"change_value_child_data": {
-    "child_fio": "👶 孩子的全名\n示例: Расулова Махлиё Азизовна",
-    "child_birth_date": "📆 输入出生日期，格式为DD.MM.YYYY\n示例: 14.08.1996",
-    "child_citizenship": "🌍 请注明国籍（用西里尔字母）\n示例: Узбекистан",
-    "child_certificate_number": "📇 请注明出生证明编号\n示例: №123456",
-    "child_certificate_issue_place": "🏢 请注明文件的签发机关\n示例: ЗАГС Центрального района г. Санкт-Петербурга",
-    "who_for_child": "🧑 请注明亲属关系（您与孩子的关系）"
-},
-
-"change_profession_btn": " 🧰 职业",
-"change_phone_by_organisation_btn": "📌 接收方的电话",
-"change_phone_by_individual_btn": "📌 接收方的电话",
-"change_value_phone_by_individual":"☎️ 输入联系人电话（如有）",
-"change_value_phone_by_organisation":"☎️ 输入联系人电话（如有）",
-"change_individual_data_dict_btn": "📄 接收方的护照",
-"change_representative_data_dict_btn": "👥 法定代表人",
-"change_who_btn": "亲属关系",
-"change_child_cert_info_dict_btn": "🧑 出生证明",
-
-"change_value_individual_data": {
-    "full_name": "请发送接收方的姓、名、父称（文本形式）",
-    "passport_give_date_input": "请发送护照的签发日期（文本形式）",
-    "passport_issue_place_input": "请发送护照的签发机关（文本形式）\n示例: Отделом УФМС России в Санкт-Петербурге",
-    "passport_serial_number_input": "请发送护照的系列号和编号（文本形式）",
-    "phone": "☎️ 输入接收方的电话号码（如有）",
-    "adress": "🏠 请注明接收方的注册地址（城市、街道、楼号）"
-},
-"change_value_representative_data": {
-    "full_name": "👶 请注明孩子的法定代表人的全名",
-    "who": "请注明谁陪同孩子或谁提交申请"
-},
-"change_value_child_cert_info": {
-    "birth_date": "📆 输入出生日期，格式为DD.MM.YYYY\n示例: 14.08.1996",
-    "child_certificate_number": "📇 请注明出生证明编号\n示例: №123456",
-    "full_name": "👶 孩子的全名\n示例: РАСУЛОВА МАХЛИЁ АЗИЗОВНА",
-    "child_citizenship": "🌍 请注明国籍（用西里尔字母）\n示例: Узбекистан"
+        "spouse_fio": "👤 输入配偶的全名（仅限西里尔字母\n示例: Кислякова Ирина Ивановна",
+        "issue_date": "📆 输入结婚证的签发日期，格式为DD.MM.YYYY\n示例: 14.08.1996",
+        "marriage_number": "📇 请注明结婚证编号\n示例: серия VII-Б №847595",
+        "marriage_issue_place": "🏢 请注明文件的签发机关\n示例: ЗАГС Центрального района г. Санкт-Петербурга"
+    },
+    "change_value_child_data": {
+        "child_fio": "👶 孩子的全名\n示例: Расулова Махлиё Азизовна",
+        "child_birth_date": "📆 输入出生日期，格式为DD.MM.YYYY\n示例: 14.08.1996",
+        "child_citizenship": "🌍 请注明国籍（用西里尔字母\n示例: Узбекистан",
+        "child_certificate_number": "📇 请注明出生证明编号\n示例: №123456",
+        "child_certificate_issue_place": "🏢 请注明文件的签发机关\n示例: ЗАГС Центрального района г. Санкт-Петербурга",
+        "who_for_child": "🧑 请注明亲属关系（您与孩子的关系）"
+    },
+    "change_profession_btn": " 🧰 职业",
+    "change_phone_by_organisation_btn": "📌 接收方的电话",
+    "change_phone_by_individual_btn": "📌 接收方的电话",
+    "change_value_phone_by_individual": "☎️ 输入联系人电话（如有）",
+    "change_value_phone_by_organisation": "☎️ 输入联系人电话（如有）",
+    "change_individual_data_dict_btn": "📄 接收方的护照",
+    "change_representative_data_dict_btn": "👥 法定代表人",
+    "change_who_btn": "亲属关系",
+    "change_child_cert_info_dict_btn": "🧑 出生证明",
+    "change_value_individual_data": {
+        "full_name": "请发送接收方的姓、名、父称（文本形式）",
+        "passport_give_date_input": "请发送护照的签发日期（文本形式）",
+        "passport_issue_place_input": "请发送护照的签发机关（文本形式\n示例: Отделом УФМС России в Санкт-Петербурге",
+        "passport_serial_number_input": "请发送护照的系列号和编号（文本形式）",
+        "phone": "☎️ 输入接收方的电话号码（如有）",
+        "adress": "🏠 请注明接收方的注册地址（城市、街道、楼号）"
+    },
+    "change_value_representative_data": {
+        "full_name": "👶 请注明孩子的法定代表人的全名",
+        "who": "请注明谁陪同孩子或谁提交申请"
+    },
+    "change_value_child_cert_info": {
+        "birth_date": "📆 输入出生日期，格式为DD.MM.YYYY\n示例: 14.08.1996",
+        "child_certificate_number": "📇 请注明出生证明编号\n示例: №123456",
+        "full_name": "👶 孩子的全名\n示例: РАСУЛОВА МАХЛИЁ АЗИЗОВНА",
+        "child_citizenship": "🌍 请注明国籍（用西里尔字母\n示例: Узбекистан"
     }
-   
 }
