--- a/locales/hi.json
+++ b/locales/hi.json
@@ -27,7 +27,7 @@
     "main_menu": {
         "welcome": "👋 नमस्ते! मैं — docBot\nमैं आपको पासपोर्ट फोटो से दस्तावेज़ों को जल्दी और सही ढंग से भरने में मदद करूँगा।\nबस नीचे से आवश्यक दस्तावेज़ चुनें — और यह कुछ ही मिनटों में प्रिंट के लिए तैयार होगा",
         "documents_title": "📋 मैं किन दस्तावेज़ों के साथ काम करता हूँ:",
-               "documents": {
+        "documents": {
             "migration_notice": "🏠 Уведомление о прибытии (миграционный учёт)",
             "residence_notification": "📍 Уведомление о проживании по ВНЖ",
             "work_activity": "👔 Уведомление о трудовой деятельности по патенту",
@@ -90,11 +90,11 @@
         "example_text": "उदाहरण: №1225673"
     },
     "passport_manual_issue_date": {
-        "title": "🗓 जारी करने की तिथि दर्ज करें (ДД.MM.ГГГГ)",
+        "title": "🗓 जारी करने की तिथि दर्ज करें (DD.MM.YYYY)",
         "example_text": "उदाहरण: 14.08.1996"
     },
     "passport_manual_expire_date": {
-        "title": "🗓 पासपोर्ट की वैधता समाप्ति तिथि दर्ज करें (ДД.MM.ГГГГ)",
+        "title": "🗓 पासपोर्ट की वैधता समाप्ति तिथि दर्ज करें (DD.MM.YYYY)",
         "example_text": "उदाहरण: 14.08.1996"
     },
     "passport_manual_issue_place": {
@@ -364,14 +364,13 @@
         "change_data_stamp_button": "✏️ किसी एक फ़ील्ड को संपादित करें"
     },
     "organisation_info_correct": {
-        "title": "Проверь, всё ли правильно:",
+        "title": "जांचें कि क्या सब कुछ सही है:",
         "full_name": "👤 पूरा नाम: ",
         "data_birthday": "🗓 जन्म तिथि: ",
         "citizenship": "🌍 नागरिकता: ",
         "passport": " 📄 पासपोर्ट: ",
         "issue_info": ", выдан ",
         "issue_date": ", срок действия ",
-        "issue_passport": " FA ",
         "issue_migr_card_info": "प्रवेश",
         "issue_migr_card": " शृंखला ",
         "name_of_org": "• नाम: ",
@@ -396,7 +395,6 @@
         "passport": " 📄 पासपोर्ट: ",
         "issue_info": ", выдан ",
         "issue_date": ", срок действия ",
-        "issue_passport": " FA ",
         "issue_migr_card_info": " प्रवेश ",
         "issue_migr_card": " शृंखला ",
         "name_of_ind": "• पूरा नाम: ",
@@ -797,7 +795,7 @@
             "example_text": "उदाहरण: 78 21 999999"
         },
         "date": {
-            "title": "🗓 ВНЖ जारी करने की तारीख दर्ज करें (ДД.ММ.ГГГГ)",
+            "title": "🗓 ВНЖ जारी करने की तारीख दर्ज करें (DD.MM.YYYY)",
             "example_text": "उदाहरण: 14.08.1996"
         },
         "issue_place": {
@@ -934,10 +932,10 @@
     "change_passport_issue_place_btn": "🏢 जारीकर्ता",
     "change_value_live_adress": "🏠 वह पता दर्ज करें जहाँ आप रूसी संघ में रहते हैं\nप्रारूप: शहर, सड़क, घर, इमारत, अपार्टमेंट",
     "change_value_phone_number": "☎️ कृपया अपना वर्तमान फ़ोन नंबर दर्ज करें\nउदाहरण: 79809008090",
-   "change_value_mvd_adress": "कृपया उस विभाग का पूरा नाम दर्ज करें जिसके लिए आप आवेदन कर रहे हैं (आमतौर पर यह आपके पिछले पंजीकरण या माइग्रेशन दस्तावेज़ में दर्शाया गया होता है)\n\nउदाहरण: ОВМ УМВД России по Приморскому району г. Санкт-Петербурга",
+    "change_value_mvd_adress": "कृपया उस विभाग का पूरा नाम दर्ज करें जिसके लिए आप आवेदन कर रहे हैं (आमतौर पर यह आपके पिछले पंजीकरण या माइग्रेशन दस्तावेज़ में दर्शाया गया होता है)\n\nउदाहरण: ОВМ УМВД России по Приморскому району г. Санкт-Петербурга",
     "change_value_passport_data": {
         "full_name": "👤 अपना पूरा नाम दर्ज करें (केवल सिरिलिक में)\nउदाहरण: Абдуллаев Жахонгир Нодирович",
-        "birth_date": "📅 जन्मदिन: ",
+        "birth_date": "📆 जन्मतिथि DD.MM.YYYY प्रारूप में दर्ज करें\nउदाहरण: 14.08.1996",
         "citizenship": "🌍 कृपया अपनी नागरिकता बताएं (सिरिलिक में)\nउदाहरण: Узбекистан",
         "passport_serial_number": "📇 कृपया श्रृंखला और दस्तावेज़ संख्या बताएँ\nउदाहरण: №1225673",
         "passport_issue_date": "🗓 कृपया जारी करने की तिथि बताएं (DD.MM.YYYY)\nउदाहरण: 14.08.1996",
@@ -946,7 +944,7 @@
     },
     "change_value_old_passport_data": {
         "full_name": "👤 अपना पूरा नाम दर्ज करें (केवल सिरिलिक में)\nउदाहरण: Абдуллаев Жахонгир Нодирович",
-        "birth_date": "📅 जन्मदिन: ",
+        "birth_date": "📆 जन्मतिथि DD.MM.YYYY प्रारूप में दर्ज करें\nउदाहरण: 14.08.1996",
         "citizenship": "🌍 कृपया अपनी नागरिकता बताएं (सिरिलिक में)\nउदाहरण: Узбекистан",
         "passport_serial_number": "📇 कृपया श्रृंखला और दस्तावेज़ संख्या बताएँ\nउदाहरण: №1225673",
         "passport_issue_date": "🗓 कृपया जारी करने की तिथि बताएं (DD.MM.YYYY)\nउदाहरण: 14.08.1996",
@@ -1003,13 +1001,12 @@
     "change_phone_btn": "📌 होस्ट फ़ोन नंबर",
     "change_migration_data_dict_btn": "📎 माइग्रेशन कार्ड",
     "change_value_document_about_home": "📝 दस्तावेज़ का नाम और विवरण दर्ज करें.\n\nउदाहरण: Выписка из ЕГРН от 08.2023",
-
     "change_value_migration_data": {
         "card_serial_number": "📇 माइग्रेशन कार्ड की श्रृंखला/संख्या\nउदाहरण: 78 0254812",
         "citizenship": "🌍 सिटिज़नशिप",
         "entry_date": "📆 रूसी संघ में प्रवेश की तिथि DD.MM.YYYY प्रारूप में दर्ज करें",
         "full_name": "👤 अपना पूरा नाम दर्ज करें (जैसा कार्ड पर दर्शाया गया है)\nउदाहरण: Расулова Азиза Абдуллаевна",
-        "number_migr_card_arrival": "🗓 ВНЖ जारी करने की तारीख दर्ज करें (ДД.ММ.ГГГГ)",
+        "number_migr_card_arrival": "🗓 ВНЖ जारी करने की तारीख दर्ज करें (DD.MM.YYYY)",
         "pretria_period": "📅 अस्थायी प्रवास की अवधि निर्दिष्ट करें\nउदाहरण: 10.08.2025",
         "live_adress": "🏠 रूसी संघ में निवास का पता",
         "goal": "✍️ कृपया प्रवेश का उद्देश्य शब्दों में बताएं, जैसा कि माइग्रेशन कार्ड पर दर्शाया गया है।"
@@ -1021,7 +1018,6 @@
         "inn": "🧾 कृपया संगठन का TIN (यदि कोई हो) प्रदान करें",
         "name_org": "🏢 संगठन का नाम दर्ज करें (पूरा, सिरिलिक में)\n\nउदाहरण: ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ «ФОРМАТ»\n(или сокращённо: ООО «ФОРМАТ»)"
     },
-    
     "change_value_marriage_data": {
         "spouse_fio": "👤 अपने जीवनसाथी का पूरा नाम दर्ज करें (केवल सिरिलिक में)\nउदाहरण: Кислякова Ирина Ивановна",
         "issue_date": "📆 विवाह प्रमाणपत्र जारी करने की तिथि DD.MM.YYYY प्रारूप में दर्ज करें\nउदाहरण: 14.08.1996",
@@ -1036,24 +1032,15 @@
         "child_certificate_issue_place": "🏢 कृपया बताएं कि दस्तावेज़ किसने जारी किया है।\nउदाहरण: ЗАГС Центрального района г. Санкт-Петербурга",
         "who_for_child": "🧑 कृपया रिश्ते की डिग्री बताएं (आप बच्चे से कैसे संबंधित हैं)"
     },
-
     "change_profession_btn": " 🧰 पेशा",
     "change_phone_by_organisation_btn": "📌 होस्ट फ़ोन नंबर",
     "change_phone_by_individual_btn": "📌 होस्ट फ़ोन नंबर",
-    "change_value_phone_by_individual":"☎️ संपर्क व्यक्ति का फ़ोन नंबर दर्ज करें (यदि उपलब्ध हो)",
-    "change_value_phone_by_organisation":"☎️ संपर्क व्यक्ति का फ़ोन नंबर दर्ज करें (यदि उपलब्ध हो)",
-
-
+    "change_value_phone_by_individual": "☎️ संपर्क व्यक्ति का फ़ोन नंबर दर्ज करें (यदि उपलब्ध हो)",
+    "change_value_phone_by_organisation": "☎️ संपर्क व्यक्ति का फ़ोन नंबर दर्ज करें (यदि उपलब्ध हो)",
     "change_individual_data_dict_btn": "📄 मेजबान पक्ष का पासपोर्ट",
     "change_representative_data_dict_btn": "👥 कानूनी प्रतिनिधि",
     "change_who_btn": "रिश्तेदारी की डिग्री",
     "change_child_cert_info_dict_btn": "🧑 जन्म प्रमाण पत्र",
-
-
-
-
-
-
     "change_value_individual_data": {
         "full_name": "मेजबान पार्टी का अंतिम नाम, पहला नाम, संरक्षक नाम पाठ में भेजें",
         "passport_give_date_input": "पासपोर्ट जारी करने की तारीख टेक्स्ट में भेजें",
@@ -1072,5 +1059,4 @@
         "full_name": "👶 बच्चे का पूरा नाम\nउदाहरण: Расулова Махлиё Азизовна",
         "child_citizenship": "🌍 कृपया अपनी नागरिकता बताएं (सिरिलिक में)\nउदाहरण: Узбекистан"
     }
-   
 }
