--- a/locales/kg.json
+++ b/locales/kg.json
@@ -50,7 +50,7 @@
     },
     "region_start_msg_confirm": {
         "title": "📋 Документте көрсөтүлөт:",
-        "example_text": "Начальнику ",  
+        "example_text": "Начальнику ",
         "description": "Эгер бөлүмдү туура эмес көрсөткөн болсоңуз, «↩️ Артка» баскычын басып, туура аталышын киргизиңиз.",
         "confirm_button": "✅ Баары туура",
         "cancel_button": "↩️ Артка"
@@ -63,7 +63,7 @@
     },
     "stamp_transfer_passport_old_title": "📝 Келгиле, ЖӨБ (ВНЖ) бар эски паспорттун маалыматтарын кол менен толтурабыз:",
     "passport_manual_full_name": {
-        "description": "👤 Аты-жөнүн киргизиңиз (жөн гана кирилл алфавити менен)\nМисал: Абдуллаев Жахонгир Нодирович" 
+        "description": "👤 Аты-жөнүн киргизиңиз (жөн гана кирилл алфавити менен)\nМисал: Абдуллаев Жахонгир Нодирович"
     },
     "passport_manual_birth_date": {
         "title": "📆 Туулган күнүңүздү КҮН.АЙ.ЖЫЛ форматында киргизиңиз",
@@ -220,7 +220,7 @@
         "example": "Мисал: «ПОСЕЩЕНИЕ РОДСТВЕННИКОВ», «ЛЕЧЕНИЕ», «ПРЕБЫВАНИЕ БЕЗ ОПРЕДЕЛЁННОЙ ЦЕЛИ»"
     },
     "place_migr_card_arrival": {
-        "title": "📍 Канчада турасыз?",       
+        "title": "📍 Канчада турасыз?",
         "description": "Бөлмө түрүн тандаңыз:",
         "places": {
             "place_one": "✅ Туруучу жай",
@@ -371,7 +371,6 @@
         "passport": " 📄 Паспорт: ",
         "issue_info": ", выдан ",
         "issue_date": ", Жарактуулук мөөнөтү ",
-        "issue_passport": " FA ",
         "issue_migr_card_info": "въезд",
         "issue_migr_card": " cерия ",
         "name_of_org": "• Наименование: ",
@@ -396,7 +395,6 @@
         "passport": " 📄 Паспорт: ",
         "issue_info": ", выдан ",
         "issue_date": ", Жарактуулук мөөнөтү ",
-        "issue_passport": " FA ",
         "issue_migr_card_info": " въезд ",
         "issue_migr_card": " Серия ",
         "name_of_ind": "• Аты-жөнү : ",
@@ -611,7 +609,7 @@
         "example_text": "Мисал: ОВМ УМВД России по Приморскому району г. Санкт-Петербурга"
     },
     "work_activity_department_user_input": {
-        "title": "📋 Документте көрсөтүлөт:",  
+        "title": "📋 Документте көрсөтүлөт:",
         "title_dep": "Начальнику",
         "description": "Эгер бөлүмдү туура эмес киргизсеңиз, «↩️ Артка» баскычын басып, туура аталышын киргизиңиз.",
         "buttons": {
@@ -717,7 +715,8 @@
             }
         },
         "wa_patent_medical_policy_number": {
-            "title": "ℹ️ Мыйзамга ылайык, сизде эмгек ишмердүүлүгүңүздүн бүткүл мөөнөтүнө жарактуу ДМС камсыздандыруу полиси болушу керек. Бул маалыматтар ИИМге берилүүчү билдирүүгө кирет.",         "description": "✍️ Укажите номер вашего полиса ДМС",
+            "title": "ℹ️ Мыйзамга ылайык, сизде эмгек ишмердүүлүгүңүздүн бүткүл мөөнөтүнө жарактуу ДМС камсыздандыруу полиси болушу керек. Бул маалыматтар ИИМге берилүүчү билдирүүгө кирет.",
+            "description": "✍️ Укажите номер вашего полиса ДМС",
             "example": "Мисал: ДМС‑927134 или 2147/МСК‑2025"
         },
         "wa_patent_insurance_company": {
@@ -936,7 +935,7 @@
     "change_value_mvd_adress": "Аризаны тапшыруу үчүн бөлүмдүн толук аталышын киргизиңиз (адатта бул сиздин мурунку каттооңузда же миграциялык документте көрсөтүлөт)\n\nНапример: ОВМ УМВД России по Приморскому району г. Санкт-Петербурга",
     "change_value_passport_data": {
         "full_name": "👤 ФИОну кирил арибинде жазыңыз\nМисал: Абдуллаев Жахонгир Нодирович",
-        "birth_date": "📅 Туулган күнү: ",
+        "birth_date": "📆 Туулган күндү DD.MM.YYYY форматында киргизиңиз\nМисал: 14.08.1996",
         "citizenship": "🌍 Граждандуулукту кирилл тамгасында көрсөтүңүз\nМисал: Узбекистан",
         "passport_serial_number": "📇 Документтин сериясын жана номерин киргизиңиз\nМисал: №1225673",
         "passport_issue_date": "🗓 Берүү күнүн көрсөтүңүз (КК.АА.ЖЖЖЖ)\nМисал: 14.08.1996",
@@ -945,7 +944,7 @@
     },
     "change_value_old_passport_data": {
         "full_name": "👤 ФИОну кирил арибинде жазыңыз\nМисал: Абдуллаев Жахонгир Нодирович",
-        "birth_date": "📅 Туулган күнү: ",
+        "birth_date": "📆 Туулган күндү DD.MM.YYYY форматында киргизиңиз\nМисал: 14.08.1996",
         "citizenship": "🌍 Граждандуулукту кирилл тамгасында көрсөтүңүз\nМисал: Узбекистан",
         "passport_serial_number": "📇 Документтин сериясын жана номерин киргизиңиз\nМисал: №1225673",
         "passport_issue_date": "🗓 Берүү күнүн көрсөтүңүз (КК.АА.ЖЖЖЖ)\nМисал: 14.08.1996",
@@ -1001,10 +1000,10 @@
     "change_adress_btn": "📌 Кабыл алуучу тараптын дареги",
     "change_phone_btn": "📌 Кабыл алуучу тараптын телефон номерин ",
     "change_migration_data_dict_btn": "📎 Миграция картасы",
+    "change_value_document_about_home": "📝 Документтин аталышын жана реквизиттерин киргизиңиз.\n\nМисал: Выписка из ЕГРН от 08.2023",
     "change_value_migration_data": {
         "card_serial_number": "📇 Миграция картасынын сериясы / номери",
         "citizenship": "🌍 Жарандыгы:",
-        "document_about_home": "📝 Документтин аталышын жана реквизиттерин киргизиңиз",
         "entry_date": "📆 Россияга кирген күнүңүздү КК.АА.ЖЖЖЖ форматында киргизиңиз",
         "full_name": "👤 ФИО",
         "number_migr_card_arrival": "🗓 ВНЖ берилиш күнүн көрсөтүңүз (ДД.ММ.ЖЖЖЖ)",
@@ -1014,32 +1013,6 @@
     },
     "change_organization_data_dict_btn": "📄 Кабыл алуучу тараптын паспорту",
     "change_value_organization_data": {
-        "adress": "Дарек",
-        "full_name_contact_of_organization": "👤 Уюмдун аталышын",
-        "inn": "🔢 ИНН",
-        "name_org": "👤 Уюмдун аталышын"
-    },
-    "change_individual_data_dict_btn": "📄 Кабыл алуучу тараптын паспорту",
-    "change_value_individual_data": {
-        "adress": "Дарек",
-        "full_name_contact_of_organization": "👤 Уюмдун аталышын",
-        "inn": "🔢 ИНН",
-        "name_org": "👤 Уюмдун аталышын"
-    },
-    "change_phone_by_organisation_btn": "📌 Алуучу тараптын телефону",
-    "change_profession_btn": " 🧰 Кесиби:",
-    "change_age_btn": "",
-    "change_passport_description_btn": "",
-    "change_birth_date_cert_btn": "",
-    "change_representative_data_dict_btn": "📄 Кабыл алуучу тараптын паспорту",
-    "change_value_representative_data": {
-        "adress": "Дарек",
-        "full_name_contact_of_organization": "👤 Уюмдун аталышын",
-        "inn": "🔢 ИНН",
-        "name_org": "👤 Уюмдун аталышын"
-    },
-    "change_child_cert_info_dict_btn": "📄 Кабыл алуучу тараптын паспорту",
-    "change_value_child_cert_info": {
         "adress": "Дарек",
         "full_name_contact_of_organization": "👤 Уюмдун аталышын",
         "inn": "🔢 ИНН",
@@ -1059,10 +1032,31 @@
         "child_certificate_issue_place": "🏢 Документти ким бергенин көрсөтүңүз\nМисал: ЗАГС Центрального района г. Санкт-Петербурга",
         "who_for_child": "🧑 Мамиленин даражасын көрсөтүңүз (балага ким экениңизди)"
     },
-"change_phone_by_individual_btn": "📌 Кабыл алуучу тараптын телефону",
-"change_value_phone_by_individual": "☎️ Байланыш үчүн адамдын телефон номерин киргизиңиз (болсо)",
-"change_value_phone_by_organisation": "☎️ Байланыш үчүн адамдын телефон номерин киргизиңиз (болсо)",
-
-"change_who_btn": "Туугандык даражасы"
-
+    "change_profession_btn": "🧰 Кесип",
+    "change_phone_by_organisation_btn": "📌 Кабыл алуучу тараптын телефону",
+    "change_phone_by_individual_btn": "📌 Кабыл алуучу тараптын телефону",
+    "change_value_phone_by_individual": "☎️ Байланыш үчүн адамдын телефон номерин киргизиңиз (болсо)",
+    "change_value_phone_by_organisation": "☎️ Байланыш үчүн адамдын телефон номерин киргизиңиз (болсо)",
+    "change_individual_data_dict_btn": "📄 Кабыл алуучу тараптын паспорту",
+    "change_representative_data_dict_btn": "👥 Мыйзамдуу өкүл",
+    "change_who_btn": "Туугандык даражасы",
+    "change_child_cert_info_dict_btn": "🧑 Төрөлгөндүгү жөнүндө күбөлүк",
+    "change_value_individual_data": {
+        "full_name": "Кабыл алуучу тараптын Фамилия Аты Атасынын атын текст түрүндө жибериңиз",
+        "passport_give_date_input": "Паспорттун берилген күнүн текст түрүндө жибериңиз",
+        "passport_issue_place_input": "Паспорт ким тарабынан берилгенин текст түрүндө жибериңиз\nПример: Отделом УФМС России в Санкт-Петербурге",
+        "passport_serial_number_input": "Паспорттун сериясын жана номерин текст түрүндө жибериңиз",
+        "phone": "☎️ Кабыл алуучу тараптын телефон номерин киргизиңиз (болсо)",
+        "adress": "🏠 Кабыл алуучу тараптын катталган дарегин киргизиңиз (шаар, көчө, үй)"
+    },
+    "change_value_representative_data": {
+        "full_name": "👶 Баланын мыйзамдуу өкүлүнүн ФИОсун киргизиңиз",
+        "who": "Баланы ким коштоп жүргөнүн же арызды ким берерин көрсөтүңүз"
+    },
+    "change_value_child_cert_info": {
+        "birth_date": "📆 Төрөлгөн күндү ДД.ММ.ГГГГ форматында киргизиңиз\nПример: 14.08.1996",
+        "child_certificate_number": "📇 Төрөлгөндүгү жөнүндө күбөлүктүн номерин киргизиңиз\nПример: №123456",
+        "full_name": "👶 Баланын ФИОсу\nПример: Расулова Махлиё Азизовна",
+        "child_citizenship": "🌍 Жарандыгын киргизиңиз (кириллицада)\nПример: Узбекистан"
+    }
 }
